feat: ship alert workflow and sprint 8 readiness pack